--- a/Apps/Telerising/docker-compose.yaml
+++ b/Apps/Telerising/docker-compose.yaml
@@ -1,21 +1,19 @@
 name: telerising
 services:
   telerising:
-    container_name: telerising
     image: qoopido/telerising.minimal:latest
-    network_mode: bridge
     ports:
       - target: 5000
         published: "5000"
         protocol: tcp
     restart: unless-stopped
     volumes:
-      - '/etc/timezone:/etc/timezone:ro'
-      - '/etc/localtime:/etc/localtime:ro'
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
       - type: bind
         source: /DATA/AppData/$AppID/settings.json
         target: /settings.json
-    user: '${UID}:${GID}'
+    user: "${UID}:${GID}"
     environment:
       UID: $PUID
       GID: $PGID
@@ -45,8 +43,8 @@ x-casaos:
   port_map: "5000"
   store_app_id: telerising
   tips:
-      before_install:
-          en_us: |
-              Create /DATA/AppData/Telerising/settings.json containing just {} for new installs.
+    before_install:
+      en_us: |
+        Create /DATA/AppData/Telerising/settings.json containing just {} for new installs.
   title:
     en_us: Telerising
