--- a/Apps/Telerising/docker-compose.yaml
+++ b/Apps/Telerising/docker-compose.yaml
@@ -13,38 +13,33 @@ services:
       - type: bind
         source: /DATA/AppData/$AppID/settings.json
         target: /settings.json
-    user: "${UID}:${GID}"
-    environment:
-      UID: $PUID
-      GID: $PGID
-    privileged: false
+    user: "$PUID:$PGID"
     x-casaos:
       ports:
         - container: "5000"
           description:
-            en_us: "WebUI HTTP Port"
+            en_us: WebUI HTTP Port
       volumes:
         - container: /settings.json
           description:
-            en_us: "The path to your persisted Telerising configuration file (create a file containing just {} for new installs)"
+            en_us: The path to your persisted Telerising configuration file (create a file containing just {} for new installs)
 x-casaos:
   architectures:
     - amd64
     - arm
     - arm64
+  main: telerising
   author: Double-A-92
   category: Media
   description:
-    en_us: "Telerising is a service that provides an API to generate simple .m3u's from Zattoo & Co."
+    en_us: Telerising is a service that provides an API to generate simple .m3u's from Zattoo & Co.
   developer: dlueth
   icon: https://cdn.jsdelivr.net/gh/Double-A-92/CasaOS-AppStore@main/Apps/Telerising/icon.png
-  index: /
-  main: telerising
-  port_map: "5000"
-  store_app_id: telerising
   tips:
     before_install:
       en_us: |
         Create /DATA/AppData/Telerising/settings.json containing just {} for new installs.
   title:
     en_us: Telerising
+  index: /
+  port_map: "5000"
