Restore Caddy tips #2

--- a/Apps/CaddyCloudFlareDNS/docker-compose.yml
+++ b/Apps/CaddyCloudFlareDNS/docker-compose.yml
@@ -39,11 +39,13 @@ x-casaos:
     en_us: "caddy-cloudflaredns adds Cloudflare LetsEncrypt support to the base Caddy 2 image."
   developer: slothcroissant
   icon: https://cdn.jsdelivr.net/gh/Double-A-92/CasaOS-AppStore@main/Apps/CaddyCloudFlareDNS/icon.png
-  store_app_id: caddy-cloudflaredns
   tips:
-    before_install: |
-      - Replace CLOUDFLARE_API_TOKEN and CLOUDFLARE_EMAIL with your actual credentials
-      - Create the file /DATA/AppData/caddy/Caddyfile.txt
-      - Use this command to hot reload Caddyfile: caddy reload --config /etc/caddy/Caddyfile
+    before_install:
+      en_us: >
+        - Replace CLOUDFLARE_API_TOKEN and CLOUDFLARE_EMAIL with your actual credentials
+
+        - Create the file /DATA/AppData/caddy/Caddyfile.txt
+              
+        - Use this command to hot reload Caddyfile: caddy reload --config /etc/caddy/Caddyfile
   title:
     en_us: Caddy with Cloudflare LetsEncrypt support 
