--- a/Apps/Heimdall/docker-compose.yml
+++ b/Apps/Heimdall/docker-compose.yml
@@ -2,9 +2,9 @@ name: heimdall
 services:
   heimdall:
     environment:
-      PGID: $PGID                       
-      PUID: $PUID                         
-      TZ: $TZ                              
+      PGID: $PGID
+      PUID: $PUID
+      TZ: $TZ
     image: linuxserver/heimdall:2.5.6
     labels:
       icon: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/heimdall-icon.png
@@ -51,10 +51,7 @@ x-casaos:
   author: Double-A-92
   category: WEB
   description:
-    en_us: A way to organise all those links to your most used web sites and web
-      applications in a simple way. Simplicity is the key to Heimdall. Why not
-      use it as your browser start page. It even has the ability to include a
-      search bar using either Google, Bing or DuckDuckGo.
+    en_us: A way to organise all those links to your most used web sites and web applications in a simple way. Simplicity is the key to Heimdall. Why not use it as your browser start page. It even has the ability to include a search bar using either Google, Bing or DuckDuckGo.
   developer: LinuxServer.io
   icon: https://cdn.jsdelivr.net/gh/Double-A-92/CasaOS-AppStore@main/Apps/Heimdall/icon.png
   index: /
