--- a/Apps/Telerising/docker-compose.yml
+++ b/Apps/Telerising/docker-compose.yml
@@ -15,6 +15,8 @@ services:
         source: /DATA/AppData/$AppID/settings.json
         target: /settings.json
     user: "$PUID:$PGID"
+    labels:
+      - "com.centurylinklabs.watchtower.scope=telerising"
     x-casaos:
       ports:
         - container: "5000"
@@ -24,6 +26,15 @@ services:
         - container: /settings.json
           description:
             en_us: The path to your persisted Telerising configuration file (create a file containing just {} for new installs)
+
+  watchtower:
+    image: containrrr/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 600 --scope telerising
+    labels:
+      - "com.centurylinklabs.watchtower.scope=telerising"
+
 x-casaos:
   architectures:
     - amd64
